# memfs

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.test.yml  docker-compose.yml  index.md  pyproject.toml
docs/: demonstration.md  viability-loop.md
docs/design/: mem-cli-design.md  session-handoff.md  v2-neo4j-architecture.md
docs/ops/: dream-schedule.md
docs/research/: INDEX.md  autoresearch-loop-skill.md  chess-autoresearch-case-study.md  filesystem-memory-search.md  llm-eval-methodology.md  llm-memory-architectures.md  mastra-memory-system.md  memory-eval-benchmarks.md  neuroscience-memory-principles.md  optimization-techniques.md  poe2-eval-case-study.md  (+1 more)
memfs/: access.py  calibration.py  cli.py  contradiction.py  db.py  decay.py  dream.py  dream_log.py  embeddings.py  eval.py  eval_cli.py  graph.py  index_render.py  indexer.py  ingest.py  parser.py  paths.py  roots.py  search.py  tcca.py  watcher.py
memfs/skills/: dream.md  (+1 more)
mvm/: backlinks.py  cli.py  index.py  log.py  search.py  stats.py  verify.py  watch.py
scripts/: backfill-sessions.sh
test/: test_verify_isolation.py
tests/: conftest.py  test_access.py  test_calibration.py  test_cli.py  test_contradiction.py  test_db.py  test_decay.py  test_dream_briefing.py  test_dream_log.py  test_embeddings.py  test_eval.py  test_eval_tcca.py  test_freshness.py  test_index_render.py  test_indexer.py  test_ingest.py  test_layer.py  test_link.py  test_neighborhood.py  test_parse.py  test_parser.py  test_path.py  test_qa.py  test_search.py  test_stats.py  test_temporal.py  test_verify.py  test_watcher.py
(+3 files in other folders)
