[project]
name = "memfs"
version = "0.1.0"
description = "Unix-native memory filesystem for LLM agents"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
vectors = [
    "sentence-transformers",
    "numpy",
]

[project.scripts]
memfs = "memfs.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
